--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/cheese-lasagna.html">Cheese Lasagna</a>
+        <ul>
+            <li><a href="./recipes/cheese-lasagna.html">Cheese Lasagna</a></li>
+            <li><a href="./recipes/italian-carbonara.html">Italian Carbonara</a></li>
+        </ul>
     </body>
 </html>
