--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="./recipes/cheese-lasagna.html">Cheese Lasagna</a></li>
             <li><a href="./recipes/italian-carbonara.html">Italian Carbonara</a></li>
+            <li><a href="./recipes/paella.html">Authentic Seafood Paella</a></li>
         </ul>
     </body>
 </html>
