add a css file and some visual to the pages

--- a/recipes/italian-carbonara.html
+++ b/recipes/italian-carbonara.html
@@ -4,27 +4,30 @@
     <head>
         <meta charset="UTC-8">
         <title>Italian Cabonara</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body>
         <h1>Italian Carbonara</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8594407.jpg&w=646&h=646&c=sc&poi=face&q=60" alt="A plate of Italian carbonara">
+        <img class="pic" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8594407.jpg&w=646&h=646&c=sc&poi=face&q=60" alt="A plate of Italian carbonara">
         <h2>Description</h2>
         <p>Truly authentic Italian carbonara with bacon coal miners' recipe.</p>
         <p>Yields 8 servings.</p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>1 (16 ounce) package spaghetti</li>
-            <li>12 slices thick-cut, applewood-smoked bacon</li>
-            <li>2 tablespoons olive oil, divided</li>
-            <li>1 onion, finely chopped</li>
-            <li>2 large cloves garlic, minced</li>
-            <li>1/4 cup dry vermouth</li>
-            <li>1 cup shredded Parmesan cheese</li>
-            <li>1/2 cup whipping cream (Optional)</li>
-            <li>4 eggs, beaten</li>
-            <li>1 tablespoon ground black pepper</li>
-        </ul>
+        <div class="ingredient">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>1 (16 ounce) package spaghetti</li>
+                <li>12 slices thick-cut, applewood-smoked bacon</li>
+                <li>2 tablespoons olive oil, divided</li>
+                <li>1 onion, finely chopped</li>
+                <li>2 large cloves garlic, minced</li>
+                <li>1/4 cup dry vermouth</li>
+                <li>1 cup shredded Parmesan cheese</li>
+                <li>1/2 cup whipping cream (Optional)</li>
+                <li>4 eggs, beaten</li>
+                <li>1 tablespoon ground black pepper</li>
+            </ul>
+        </div>
         <h2>Steps</h2>
         <ol>
             <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally, until tender yet firm to the bite, about 12 minutes.</li>
