--- a/recipes/paella.html
+++ b/recipes/paella.html
@@ -4,36 +4,40 @@
     <head>
         <meta charset="UTC-8">
         <title>Authentic Seafood Paella</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body>
         <h1>Authentic Seafood Paella</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8662859.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="Seafood paella">
+        <img class="pic" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8662859.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="Seafood paella">
         <h2>Description</h2>
         <p>Paella is a classic Spanish dish of rice cooked with shellfish and seasoned with saffron. It is perfect for easy entertaining.</p>
         <p>Yields 2 servings.</p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>2 tablespoons olive oil</li>
-            <li>1 onion, finely diced</li>
-            <li>1/2 tomato, finely diced</li>
-            <li>1 pinch salt</li>
-            <li>1/2 tablespoon smoked paprika</li>
-            <li>6 fresh romano or green beans</li>
-            <li>1/2 cup canned butter beans, drained and rinsed</li>
-            <li>1/2 cup white rice</li>
-            <li>6 large shrimp</li>
-            <li>6 mussels</li>
-            <li>6 clams</li>
-            <li>1 cup white wine</li>
-            <li>2 cups seafood stock</li>
-            <li>1 pinch saffron threads</li>
-            <li>1 teaspoon finely chopped fresh rosemary</li>
-            <li>1 cup fresh peas</li>
-            <li>5 baby squid, cut into rings and tentacles</li>
-            <li>1 lemon, cut into wedges</li>
-            <li>1 tablespoon chopped fresh flat-leaf parsley</li>
-        </ul>
+        <div class="ingredient">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>2 tablespoons olive oil</li>
+                <li>1 onion, finely diced</li>
+                <li>1/2 tomato, finely diced</li>
+                <li>1 pinch salt</li>
+                <li>1/2 tablespoon smoked paprika</li>
+                <li>6 fresh romano or green beans</li>
+                <li>1/2 cup canned butter beans, drained and rinsed</li>
+                <li>1/2 cup white rice</li>
+                <li>6 large shrimp</li>
+                <li>6 mussels</li>
+                <li>6 clams</li>
+                <li>1 cup white wine</li>
+                <li>2 cups seafood stock</li>
+                <li>1 pinch saffron threads</li>
+                <li>1 teaspoon finely chopped fresh rosemary</li>
+                <li>1 cup fresh peas</li>
+                <li>5 baby squid, cut into rings and tentacles</li>
+                <li>1 lemon, cut into wedges</li>
+                <li>1 tablespoon chopped fresh flat-leaf parsley</li>
+            </ul>
+        </div>
+        
         <h2>Steps</h2>
         <ol>
             <li>Heat olive oil in a large skillet or paella pan over high heat. Cook and stir onion, tomato, salt, and smoked paprika into the hot oil until softened, about 3 minutes. Add romano beans, butter beans, and rice; cook and stir until rice is coated with oil, 2 to 3 minutes.</li>
