--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTC-8">
         <title>Index</title>
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
 
     <body>
