--- a/recipes/cheese-lasagna.html
+++ b/recipes/cheese-lasagna.html
@@ -4,27 +4,30 @@
     <head>
         <meta charset="UTC-8">
         <title>Cheese Lasagna</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body>
         <h1>Cheese Lasagna</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9099846.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="A cheese lasagna">
+        <img class="pic" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9099846.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="A cheese lasagna">
         <h2>Description</h2>
         <p>Easy vegetarian lasagna with ricotta, mozzarella and Parmesan cheeses.</p>
         <p>Yields 8 servings.</p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>1 package of lasagna noodles.</li>
-            <li>4 cups of ricotta cheese.</li>
-            <li>4 eggs.</li>
-            <li>1/4 cup grated Parmesan cheese.</li>
-            <li>Salt and pepper to taste.</li>
-            <li>1 teaspoon olive oil.</li>
-            <li>3 cloves garlic, minced.</li>
-            <li>1 (32 ounce) jar spaghetti sauce.</li>
-            <li>1 teaspoon Italian seasoning.</li>
-            <li>2 cups shredded mozzarella cheese.</li>
-        </ul>
+        <div class="ingredient">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>1 package of lasagna noodles.</li>
+                <li>4 cups of ricotta cheese.</li>
+                <li>4 eggs.</li>
+                <li>1/4 cup grated Parmesan cheese.</li>
+                <li>Salt and pepper to taste.</li>
+                <li>1 teaspoon olive oil.</li>
+                <li>3 cloves garlic, minced.</li>
+                <li>1 (32 ounce) jar spaghetti sauce.</li>
+                <li>1 teaspoon Italian seasoning.</li>
+                <li>2 cups shredded mozzarella cheese.</li>
+            </ul>
+        </div>
         <h2>Steps</h2>
         <ol>
             <li>Preheat the oven to 350 degrees F(175 degrees C).</li>
