--- a/recipes/recipe-template.html
+++ b/recipes/recipe-template.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTC-8">
         <title></title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body>
@@ -13,18 +14,20 @@
         <p></p>
         <p>Yields X servings.</p>
         <h2>Ingredients</h2>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+        <div class="ingredient">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
         <h2>Steps</h2>
         <ol>
             <li></li>
